# Agent-CURA

./: .dockerignore  .env.example  .gitignore  README.md  SETUP_GUIDE.md  docker-compose.yml  main.py  render.yaml  requirements.txt  scribe_testing_guide.md  test_mic.py
.venv_cura/: pyvenv.cfg
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt  run.py  test_db.py
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: auditor.py  billing.py  diarizer_refiner.py  orchestrator.py  scribe.py
backend/app/api/: routes_auth.py  routes_consultation.py  routes_database.py  routes_fhir.py  routes_patients.py  ws_audio.py
backend/app/middleware/: __init__.py  auth.py  rate_limiter.py
backend/app/models/: database.py  schemas.py
backend/app/services/: audio_storage.py  diarizer.py  drug_safety.py  fhir_bridge.py  safety.py  transcriber.py
backend/app/utils/: icd10_lookup.py
backend/migrations/: 001_create_tables.sql  002_clean_and_sync_schema.sql
backend/tests/: __init__.py  conftest.py  test_fhir.py  test_routes.py  test_safety.py  test_schemas.py
engine/: database.py  orchestrator.py  safety.py  transcriber.py
frontend/: .prettierrc  Dockerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/public/: manifest.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/hooks/: useApi.ts  useAudioRecorder.ts  useAuth.ts  useAuth.tsx  (+3 more)
scratch/: inspect_ws.py  test_local.py  test_local_stream.py  test_local_ws.py  test_prod_stream.py  test_ws.py
services/: fhir_bridge.py
(+33 files in other folders)
